# newserver

./: CMakeLists.txt
libns/: CMakeLists.txt
libns/include/: libns.h  libns.hpp  libns_callmap.hpp
libns/src/: main.c
newserver/: CMakeLists.txt
newserver/include/: Sock.hpp  call_table.hpp  config.hpp  main.hpp
newserver/src/: CMakeLists.txt  EventManager.cpp  Sock.cpp  call_table.cpp  commands.cpp  main.cpp  signal.cpp
newserverinteractive/: CMakeLists.txt
newserverinteractive/src/: fswclient.cpp
